Add myself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,8 @@ Vincent Untz, Debarshi Ray, Stuart Axon, Kao, Barak Itkin, Michael Muré, Mikael
 Magnusson, Patrick Horgan, Tobias Ellinghaus, Rasmus Hahn, Chantal Racette,
 John Cupitt, Anthony Thyssen, Emilio Pozuelo Monfort, Robert Sasu, Massimo 
 Valentini, Hans Lo, Zbigniew Chyla, David Evans, Javier Jardón, Matteo F.
-Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk and Felix Ulber.
+Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk, Felix Ulber,
+and Daniel Sabo.
 
 Documentation:
 ^^^^^^^^^^^^^^
