--- a/po/es.po
+++ b/po/es.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: gegl.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=gegl&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-06-14 18:47+0000\n"
-"PO-Revision-Date: 2013-06-17 17:56+0200\n"
+"POT-Creation-Date: 2013-06-26 09:52+0000\n"
+"PO-Revision-Date: 2013-06-26 12:46+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "Language: \n"
@@ -23,17 +23,17 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Generator: Gtranslator 2.91.5\n"
 
-#: ../bin/gegl.c:146
+#: ../bin/gegl.c:144
 #, c-format
 msgid "Unable to read file: %s"
 msgstr "No se pudo leer del archivo: %s"
 
-#: ../bin/gegl.c:190
+#: ../bin/gegl.c:175
 #, c-format
 msgid "Invalid graph, abort.\n"
 msgstr "Gráfico no válido, cancelar.\n"
 
-#: ../bin/gegl.c:256 ../bin/gegl-options.c:124
+#: ../bin/gegl.c:241 ../bin/gegl-options.c:124
 #, c-format
 msgid "Unknown GeglOption mode: %d"
 msgstr "Modo de GeglOption desconocido: %d"
@@ -351,6 +351,103 @@ msgid "A source that uses an in-memory GeglBuffer, for use internally by GEGL."
 msgstr ""
 "Una fuente que utiliza un GeglBuffer en memoria, para uso interno de GEGL."
 
+#: ../operations/common/bump-map.c:45 ../operations/common/bump-map.c:47
+#: ../operations/common/emboss.c:34
+msgid "Azimuth"
+msgstr "Azimut"
+
+#: ../operations/common/bump-map.c:49 ../operations/common/bump-map.c:51
+#: ../operations/common/emboss.c:38
+msgid "Elevation"
+msgstr "Elevación"
+
+#: ../operations/common/bump-map.c:53 ../operations/common/bump-map.c:55
+#: ../operations/common/emboss.c:42 ../operations/common/fractal-trace.c:55
+msgid "Depth"
+msgstr "Profundidad"
+
+#: ../operations/common/bump-map.c:57
+msgid "xofs"
+msgstr "xofs"
+
+#: ../operations/common/bump-map.c:59 ../operations/common/checkerboard.c:33
+#: ../operations/common/grid.c:28 ../operations/common/mirrors.c:36
+#: ../operations/seamless-clone/seamless-clone.c:24
+#: ../operations/seamless-clone/seamless-clone-compose.c:24
+msgid "X offset"
+msgstr "Desplazamiento X"
+
+#: ../operations/common/bump-map.c:61
+msgid "yofs"
+msgstr "yofs"
+
+#: ../operations/common/bump-map.c:63 ../operations/common/checkerboard.c:37
+#: ../operations/common/grid.c:30 ../operations/common/mirrors.c:38
+#: ../operations/seamless-clone/seamless-clone.c:27
+#: ../operations/seamless-clone/seamless-clone-compose.c:27
+msgid "Y offset"
+msgstr "Desplazamiento Y"
+
+#: ../operations/common/bump-map.c:65
+#| msgid "Water level"
+msgid "waterlevel"
+msgstr "nivel del agua"
+
+#: ../operations/common/bump-map.c:67
+msgid "Level that full transparency should represent"
+msgstr "Nivel que una total transparencia debe representar"
+
+#: ../operations/common/bump-map.c:69
+msgid "ambient"
+msgstr "ambiente"
+
+#: ../operations/common/bump-map.c:71
+#| msgid "Green stretching factor"
+msgid "Ambient lighting factor"
+msgstr "Factor de iluminación ambiente"
+
+#: ../operations/common/bump-map.c:73
+msgid "Compensate"
+msgstr "Compensar"
+
+#: ../operations/common/bump-map.c:75
+msgid "Compensate for darkening"
+msgstr "Compensar oscurecimiento"
+
+#: ../operations/common/bump-map.c:77
+msgid "Invert"
+msgstr "Invertir"
+
+#: ../operations/common/bump-map.c:79
+msgid "Invert bumpmap"
+msgstr "Invertir mapa de relieve"
+
+#: ../operations/common/bump-map.c:81
+msgid "Type"
+msgstr "Tipo"
+
+#: ../operations/common/bump-map.c:84
+#| msgid "Type of wave"
+msgid "Type of map"
+msgstr "Tipo de mapa"
+
+#: ../operations/common/bump-map.c:86 ../operations/common/bump-map.c:88
+#| msgid "Tileable"
+msgid "Tiled"
+msgstr "En mosaico"
+
+#: ../operations/common/bump-map.c:474
+msgid ""
+"This plug-in uses the algorithm described by John Schlag, \"Fast Embossing "
+"Effects on Raster Image Data\" in Graphics GEMS IV (ISBN 0-12-336155-9). It "
+"takes a drawable to be applied as a bump map to another image and produces a "
+"nice embossing effect."
+msgstr ""
+"Este complemento usa el algoritmo descrito por John Schlag, «Fast Embossing "
+"Effects on Raster Image Data» en Graphics GEMS IV (ISBN 0-12-336155-9). Toma "
+"un dibujable que aplicar como mapa de relieve a otra imagen y genera un "
+"efecto de repujado."
+
 #: ../operations/common/c2g.c:29
 msgid ""
 "Neighborhood taken into account, this is the radius in pixels taken into "
@@ -429,23 +526,9 @@ msgstr "Altura"
 msgid "Vertical width of cells in pixels"
 msgstr "Anchura vertical de las celdillas en píxeles"
 
-#: ../operations/common/checkerboard.c:33 ../operations/common/grid.c:28
-#: ../operations/common/mirrors.c:36
-#: ../operations/seamless-clone/seamless-clone.c:24
-#: ../operations/seamless-clone/seamless-clone-compose.c:24
-msgid "X offset"
-msgstr "Desplazamiento X"
-
 #: ../operations/common/checkerboard.c:35 ../operations/common/grid.c:29
 msgid "Horizontal offset (from origin) for start of grid"
 msgstr "Desplazamiento horizontal (desde el origen) del comienzo de la rejilla"
-
-#: ../operations/common/checkerboard.c:37 ../operations/common/grid.c:30
-#: ../operations/common/mirrors.c:38
-#: ../operations/seamless-clone/seamless-clone.c:27
-#: ../operations/seamless-clone/seamless-clone-compose.c:27
-msgid "Y offset"
-msgstr "Desplazamiento Y"
 
 #: ../operations/common/checkerboard.c:39 ../operations/common/grid.c:31
 msgid "Vertical offset (from origin) for start of grid"
@@ -783,25 +866,13 @@ msgstr "Tipo de repujado"
 msgid "Emboss or Bumpmap"
 msgstr "Repujado o mapa de relieve"
 
-#: ../operations/common/emboss.c:34
-msgid "Azimuth"
-msgstr "Azimut"
-
 #: ../operations/common/emboss.c:36
 msgid "The light angle (degrees)"
 msgstr "El ángulo de la luz (grados)"
 
-#: ../operations/common/emboss.c:38
-msgid "Elevation"
-msgstr "Elevación"
-
 #: ../operations/common/emboss.c:40
 msgid "The elevation angle (degrees)"
 msgstr "El ángulo de elevación (grados)"
-
-#: ../operations/common/emboss.c:42 ../operations/common/fractal-trace.c:55
-msgid "Depth"
-msgstr "Profundidad"
 
 #: ../operations/common/emboss.c:44
 msgid "The filter width"
@@ -1300,7 +1371,8 @@ msgstr "GeglNode que inspeccionar"
 msgid "GEGL graph visualizer."
 msgstr "Visualizador de gráficos de GEGL."
 
-#: ../operations/common/invert.c:76
+#: ../operations/common/invert-gamma.c:81
+#: ../operations/common/invert-linear.c:76
 msgid ""
 "Inverts the components (except alpha), the result is the corresponding "
 "\"negative\" image."
