--- a/po/es.po
+++ b/po/es.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: gegl.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=gegl&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-06-26 09:52+0000\n"
-"PO-Revision-Date: 2013-06-26 12:46+0200\n"
+"POT-Creation-Date: 2013-06-28 23:01+0000\n"
+"PO-Revision-Date: 2013-07-01 17:38+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "Language: \n"
@@ -189,10 +189,10 @@ msgid "Use OpenCL"
 msgstr "Usar OpenCL"
 
 #: ../gegl/gegl-init.c:285
-msgid "Maximum number of entries in the file tile backend's writer queue"
+#| msgid "Maximum number of entries in the file tile backend's writer queue"
+msgid "Maximum size of a file backend's writer thread queue (in MB)"
 msgstr ""
-"Número máximo de entradas en ella cola baldosa escritora del archivo del "
-"«backend»"
+"Tamaño máximo de la cola de escritura del «backend» de un archivo (en MB)"
 
 #: ../gegl/module/geglmodule.c:147 ../gegl/module/geglmodule.c:165
 #: ../gegl/module/geglmodule.c:274 ../gegl/module/geglmodule.c:301
@@ -351,92 +351,97 @@ msgid "A source that uses an in-memory GeglBuffer, for use internally by GEGL."
 msgstr ""
 "Una fuente que utiliza un GeglBuffer en memoria, para uso interno de GEGL."
 
-#: ../operations/common/bump-map.c:45 ../operations/common/bump-map.c:47
+#: ../operations/common/bump-map.c:45
+msgid "Type"
+msgstr "Tipo"
+
+#: ../operations/common/bump-map.c:48
+msgid "Type of map"
+msgstr "Tipo de mapa"
+
+#: ../operations/common/bump-map.c:50
+msgid "Compensate"
+msgstr "Compensar"
+
+#: ../operations/common/bump-map.c:52
+msgid "Compensate for darkening"
+msgstr "Compensar oscurecimiento"
+
+#: ../operations/common/bump-map.c:54
+msgid "Invert"
+msgstr "Invertir"
+
+#: ../operations/common/bump-map.c:56
+msgid "Invert bumpmap"
+msgstr "Invertir mapa de relieve"
+
+#: ../operations/common/bump-map.c:58
+msgid "Tiled"
+msgstr "En mosaico"
+
+#: ../operations/common/bump-map.c:60
+#| msgid "Invert bumpmap"
+msgid "Tiled bumpmap"
+msgstr "Mapa de relieve en mosaico"
+
+#: ../operations/common/bump-map.c:62 ../operations/common/bump-map.c:64
 #: ../operations/common/emboss.c:34
 msgid "Azimuth"
 msgstr "Azimut"
 
-#: ../operations/common/bump-map.c:49 ../operations/common/bump-map.c:51
+#: ../operations/common/bump-map.c:66 ../operations/common/bump-map.c:68
 #: ../operations/common/emboss.c:38
 msgid "Elevation"
 msgstr "Elevación"
 
-#: ../operations/common/bump-map.c:53 ../operations/common/bump-map.c:55
+#: ../operations/common/bump-map.c:70 ../operations/common/bump-map.c:72
 #: ../operations/common/emboss.c:42 ../operations/common/fractal-trace.c:55
 msgid "Depth"
 msgstr "Profundidad"
 
-#: ../operations/common/bump-map.c:57
-msgid "xofs"
-msgstr "xofs"
+#: ../operations/common/bump-map.c:74
+#| msgid "X offset"
+msgid "X Offset"
+msgstr "Desplazamiento X"
 
-#: ../operations/common/bump-map.c:59 ../operations/common/checkerboard.c:33
+#: ../operations/common/bump-map.c:76 ../operations/common/checkerboard.c:33
 #: ../operations/common/grid.c:28 ../operations/common/mirrors.c:36
 #: ../operations/seamless-clone/seamless-clone.c:24
 #: ../operations/seamless-clone/seamless-clone-compose.c:24
 msgid "X offset"
 msgstr "Desplazamiento X"
 
-#: ../operations/common/bump-map.c:61
-msgid "yofs"
-msgstr "yofs"
+#: ../operations/common/bump-map.c:78
+#| msgid "Y offset"
+msgid "Y Offset"
+msgstr "Desplazamiento Y"
 
-#: ../operations/common/bump-map.c:63 ../operations/common/checkerboard.c:37
+#: ../operations/common/bump-map.c:80 ../operations/common/checkerboard.c:37
 #: ../operations/common/grid.c:30 ../operations/common/mirrors.c:38
 #: ../operations/seamless-clone/seamless-clone.c:27
 #: ../operations/seamless-clone/seamless-clone-compose.c:27
 msgid "Y offset"
 msgstr "Desplazamiento Y"
 
-#: ../operations/common/bump-map.c:65
+#: ../operations/common/bump-map.c:82
 #| msgid "Water level"
-msgid "waterlevel"
-msgstr "nivel del agua"
+msgid "Waterlevel"
+msgstr "Nivel del agua"
 
-#: ../operations/common/bump-map.c:67
+#: ../operations/common/bump-map.c:84
 msgid "Level that full transparency should represent"
 msgstr "Nivel que una total transparencia debe representar"
 
-#: ../operations/common/bump-map.c:69
-msgid "ambient"
+#: ../operations/common/bump-map.c:86
+#| msgid "ambient"
+msgid "Ambient"
 msgstr "ambiente"
 
-#: ../operations/common/bump-map.c:71
-#| msgid "Green stretching factor"
+#: ../operations/common/bump-map.c:88
 msgid "Ambient lighting factor"
 msgstr "Factor de iluminación ambiente"
 
-#: ../operations/common/bump-map.c:73
-msgid "Compensate"
-msgstr "Compensar"
-
-#: ../operations/common/bump-map.c:75
-msgid "Compensate for darkening"
-msgstr "Compensar oscurecimiento"
-
-#: ../operations/common/bump-map.c:77
-msgid "Invert"
-msgstr "Invertir"
-
-#: ../operations/common/bump-map.c:79
-msgid "Invert bumpmap"
-msgstr "Invertir mapa de relieve"
-
-#: ../operations/common/bump-map.c:81
-msgid "Type"
-msgstr "Tipo"
-
-#: ../operations/common/bump-map.c:84
-#| msgid "Type of wave"
-msgid "Type of map"
-msgstr "Tipo de mapa"
-
-#: ../operations/common/bump-map.c:86 ../operations/common/bump-map.c:88
-#| msgid "Tileable"
-msgid "Tiled"
-msgstr "En mosaico"
-
-#: ../operations/common/bump-map.c:474
+#: ../operations/common/bump-map.c:477
 msgid ""
 "This plug-in uses the algorithm described by John Schlag, \"Fast Embossing "
 "Effects on Raster Image Data\" in Graphics GEMS IV (ISBN 0-12-336155-9). It "
@@ -4227,6 +4232,16 @@ msgid ""
 msgstr ""
 "Filtro de percentil que resalta los bordes y reduce el ruido, basado en los "
 "vecinos simétricos más próximos"
+
+#~ msgid "xofs"
+#~ msgstr "xofs"
+
+#~ msgid "yofs"
+#~ msgstr "yofs"
+
+#~| msgid "Water level"
+#~ msgid "waterlevel"
+#~ msgstr "nivel del agua"
 
 #~ msgid "Scales the buffer."
 #~ msgstr "Escala el búfer."
