add myself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,7 +15,7 @@ Magnusson, Patrick Horgan, Tobias Ellinghaus, Rasmus Hahn, Chantal Racette,
 John Cupitt, Anthony Thyssen, Emilio Pozuelo Monfort, Robert Sasu, Massimo 
 Valentini, Hans Lo, Zbigniew Chyla, David Evans, Javier Jardón, Matteo F.
 Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk, Felix Ulber,
-and Daniel Sabo.
+Daniel Sabo and Téo Mazars.
 
 Documentation:
 ^^^^^^^^^^^^^^
