Update gegl.doap and AUTHORS
Make gegl.doap compliant to the new DOAP file style (GUADEC 2014):
* Add new mandatory fields 'description' and 'programming-language'.

Add bug tracker URL.
Update mailing list adress.
Remove trailing white spaces.
Add me to AUTHORS.
(cherry picked from commit 279b33eddb37c8d832b85252ec87e8920f26f852)

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,7 +15,7 @@ Magnusson, Patrick Horgan, Tobias Ellinghaus, Rasmus Hahn, Chantal Racette,
 John Cupitt, Anthony Thyssen, Emilio Pozuelo Monfort, Robert Sasu, Massimo 
 Valentini, Hans Lo, Zbigniew Chyla, David Evans, Javier Jardón, Matteo F.
 Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk, Felix Ulber,
-Daniel Sabo and Téo Mazars.
+Daniel Sabo, Téo Mazars and Sven Claussner.
 
 Documentation:
 ^^^^^^^^^^^^^^
